# const-pkg-version-rs

./: CHANGELOG  Cargo.toml  LICENSE.md  README.md  update-readme
.github/workflows/: rust.yml
const-pkg-version/: Cargo.toml  README.md  README.tpl
const-pkg-version-macros/: Cargo.toml
const-pkg-version-macros/src/: error.rs  lib.rs
const-pkg-version/src/: lib.rs
tests/full-metadata/: Cargo.toml
tests/full-metadata/tests/: no_std.rs  with_std.rs
tests/no-metadata/: Cargo.toml
tests/no-metadata/src/: main.rs
tests/no-metadata/tests/: no_std.rs  with_std.rs
