[package]
name = "const-pkg-version"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug"]
defmt = ["dep:defmt"]
debug = []
serde = ["dep:serde"]
semver = ["dep:semver"]

[dependencies]
const-pkg-version-macros = { version= "0.1.0", path = "../const-pkg-version-macros" }
defmt = { version = "1.0.1", optional = true }
semver = { version = "1.0.26", default-features = false, optional = true }
serde = { version = "1.0.219", default-features = false, optional = true, features = ["derive"] }
